<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dirTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/directory"/>

    <TextView
        android:id="@+id/filesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files" />

    <Button
        android:id="@+id/stats_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="done"
        android:text="@string/done" />

</LinearLayout>